--- a/Spotify EDA.ipynb
+++ b/Spotify EDA.ipynb
@@ -2187,7 +2187,7 @@
     "plt.title('Duration of the songs in Different Genres')\n",
     "sns.color_palette('rocket',as_cmap=True)\n",
     "sns.barplot(y='genre',x='duration_ms',data=df_genre)\n",
-    "plt.xlabel(\"Duration is milli second\")\n",
+    "plt.xlabel(\"Duration in milli second\")\n",
     "plt.ylabel(\"Genres\")\n"
    ]
   },
